--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="preloader">
         <div class="preloaderImg"></div>
     </div>
-    <!-- search layer -->
+
     <div class="layer"></div>
     <!-- search container -->
     <div class="search-container">
@@ -62,7 +62,7 @@
             </ul>
             <ul class="util">
                 <li>
-                   <a class="lang">
+                    <a class="lang">
                         <span> ع </span>
                     </a>
                 </li>
@@ -460,7 +460,7 @@
                                             <option value="from 19 to 25"> from 19 to 25 </option>
                                             <option value="from 26 to 45"> from 26 to 45 </option>
                                             <option value="from 45+"> from 45+ </option>
-                                          </select>
+                                        </select>
                                     </div>
                                 </li>
                                 <li>
@@ -1046,7 +1046,10 @@
                 </div>
                 <div class="col-12 p-2">
                     <div class="copy_rights">
-                        <p>Copyright &copy;  <script>document.write(new Date().getFullYear())</script>. All Rights Reserved to <a href="index.html">Jobs in saudi</a></p>
+                        <p>Copyright &copy;
+                            <script>document.write(new Date().getFullYear())</script>. All Rights Reserved to <a
+                                href="index.html">Jobs in saudi</a>
+                        </p>
                         <div class="social_media">
                             <ul>
                                 <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
