--- a/add-promote.html
+++ b/add-promote.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/jquery.ccpicker.css" />
   </head>
 
   <body>
@@ -363,17 +362,17 @@
       </nav>
       <!-- search wrapper -->
       <!-- <div class="search_wrapper">
-              <div class="container">
-                  <form action="">
-                      <div class="search_field">
-                          <button>
-                              <img loading="lazy" src="assets/images/searchIcon.svg" alt="">
-                          </button>
-                          <input type="text" placeholder="Search for employees...">
-                      </div>
-                  </form>
-              </div>
-          </div> -->
+            <div class="container">
+                <form action="">
+                    <div class="search_field">
+                        <button>
+                            <img loading="lazy" src="assets/images/searchIcon.svg" alt="">
+                        </button>
+                        <input type="text" placeholder="Search for employees...">
+                    </div>
+                </form>
+            </div>
+        </div> -->
     </header>
     <!-- main wrapper -->
     <main>
@@ -391,21 +390,17 @@
             <div class="col-lg-7 col-12 p-2">
               <div class="auth_form">
                 <div class="title force_center">
-                  <h4>Company Account</h4>
-                  <p>
-                    Please enter the company's information to complete the
-                    registration process.
-                  </p>
+                  <h4>Promote</h4>
+                  <p>Please enter the promote details.</p>
                 </div>
-                <form action="pricing-plans.html">
+                <form action="">
                   <div class="row m-0">
                     <div class="col-12 p-2 mb-1">
                       <div class="image_change">
                         <div class="image_upload">
-                          <h4 id="uploadLabel">LOGO</h4>
                           <img
                             loading="lazy"
-                            src=""
+                            src="assets/images/avatar.svg"
                             alt=""
                             id="uploadedImage"
                           />
@@ -418,96 +413,20 @@
                     </div>
                     <div class="col-12 p-2 mb-1">
                       <div class="input_field">
-                        <label for="nameEn" class="label"
-                          >Company Name “ english ”</label
+                        <label for="promoteLink" class="label"
+                          >Promote link</label
                         >
                         <input
                           type="text"
-                          name="nameEn"
-                          id="nameEn"
+                          name="promoteLink"
+                          id="promoteLink"
                           onfocus="highlight(this)"
                           onblur="unhighlight(this)"
                         />
-                      </div>
-                    </div>
-                    <div class="col-12 p-2 mb-1">
-                      <div class="input_field">
-                        <label for="nameAr" class="label"
-                          >Company Name “ Arabic ”</label
-                        >
-                        <input
-                          type="text"
-                          name="nameAr"
-                          id="nameAr"
-                          onfocus="highlight(this)"
-                          onblur="unhighlight(this)"
-                        />
-                      </div>
-                    </div>
-                    <div class="col-12 p-2 mb-1">
-                      <div class="input_field">
-                        <label for="adminName" class="label"
-                          >Account Administrator Name</label
-                        >
-                        <input
-                          type="text"
-                          name="adminName"
-                          id="adminName"
-                          onfocus="highlight(this)"
-                          onblur="unhighlight(this)"
-                        />
-                      </div>
-                    </div>
-                    <div class="col-12 p-2 mb-1">
-                      <div class="input_field">
-                        <label for="comNum" class="label">
-                          commercial registration number</label
-                        >
-                        <input
-                          type="text"
-                          name="comNum"
-                          id="comNum"
-                          onfocus="highlight(this)"
-                          onblur="unhighlight(this)"
-                        />
-                      </div>
-                    </div>
-                    <div class="col-12 p-2 mb-1">
-                      <div class="input_field">
-                        <label for="location" class="label">location</label>
-                        <input
-                          type="text"
-                          name="loaction"
-                          id="location"
-                          onfocus="highlight(this)"
-                          onblur="unhighlight(this)"
-                        />
-                        <div
-                          data-bs-toggle="modal"
-                          data-bs-target="#companyLocation"
-                          class="location"
-                        >
-                          <img
-                            loading="lazy"
-                            src="assets/images/location.svg"
-                            alt=""
-                          />
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-12 p-2 mb-1">
-                      <div class="input_field">
-                        <label for="bio" class="label"> Bio</label>
-                        <textarea
-                          name="bio"
-                          id="bio"
-                          onfocus="highlight(this)"
-                          onblur="unhighlight(this)"
-                        ></textarea>
                       </div>
                     </div>
                     <div class="col-12 p-2">
-                      <button class="save_btn">Confirm</button>
+                      <button class="save_btn">Add</button>
                     </div>
                   </div>
                 </form>
@@ -712,62 +631,8 @@
         </div>
       </div>
     </footer>
-    <div
-      class="modal fade"
-      id="companyLocation"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">
-              Search for your location...
-            </h5>
-            <button
-              type="button"
-              class="btn-close"
-              style="box-shadow: none !important"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <input type="text" placeholder="write your location" />
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d867272.0427997325!2d35.55157424627044!3d31.88535968568026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151cf2d28866bdd9%3A0xee17a001d166f686!2z2YHZhNiz2LfZitmG!5e0!3m2!1sar!2seg!4v1698064978479!5m2!1sar!2seg"
-              height="300"
-              style="border: 0; width: 100%"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn">Confirm</button>
-          </div>
-        </div>
-      </div>
-    </div>
     <!-- js -->
     <script src="assets/js/main.js"></script>
     <script src="assets/js/app.js"></script>
-    <script>
-      let inputImg = document.getElementById("img-upload");
-      let uploadedImage = document.getElementById("uploadedImage");
-      uploadedImage.style.display = "none";
-      inputImg.addEventListener("change", () => {
-        if (inputImg.files && inputImg.files[0]) {
-          uploadedImage.style.display = "block";
-          const reader = new FileReader();
-          reader.onload = (e) => {
-            uploadedImage.src = e.target.result;
-          };
-          document.getElementById("uploadLabel").style.display = "none";
-          reader.readAsDataURL(inputImg.files[0]);
-        }
-      });
-    </script>
   </body>
 </html>
