--- a/add-promote.html
+++ b/add-promote.html
@@ -384,7 +384,7 @@
           </div>
         </div>
       </section>
-      <section class="auth_section">
+      <section class="auth_section addPromomte">
         <div class="container p-0">
           <div class="row m-0 justify-content-center">
             <div class="col-lg-7 col-12 p-2">
@@ -400,7 +400,7 @@
                         <div class="image_upload">
                           <img
                             loading="lazy"
-                            src="assets/images/avatar.svg"
+                            src="assets/images/camera-icon.svg"
                             alt=""
                             id="uploadedImage"
                           />
